// 版本号
syntax = "proto3";

// 指定文件生成的路径。当前路径下包名为service
option go_package = ".;service";

// 定义结构体
message UserRequest {
  // 定义用户名
  string name = 1;
}

// 响应结构体
message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  // repeated修饰符是可变数组，go转切片
  repeated string hobby = 4;
}

// service定义方法
service UserInfoService {
  rpc GetUserInfo (UserRequest) returns (UserResponse) {
  }
}